src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__worker_status__tests__snapshot_worker_status_minimal_data.snap
---
source: src/commands/task/orchestrate/worker_status.rs
expression: format_worker_status(&status)
---
WorkerStatus {
│ state: Idle
│ task_id: Some("1.1")
│ component: None
│ phase: None
│ model: None
│ cost_usd: $0.0000
│ input_tokens: 0
│ output_tokens: 0
│ verify_profiles: []
}
