src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__worker_status__tests__snapshot_worker_status_resolving_conflicts.snap
---
source: src/commands/task/orchestrate/worker_status.rs
expression: format_worker_status(&status)
---
WorkerStatus {
│ state: ResolvingConflicts
│ task_id: Some("99.9")
│ component: Some("api")
│ phase: None
│ model: Some("claude-opus-4-6")
│ cost_usd: $0.9999
│ input_tokens: 25000
│ output_tokens: 15000
│ verify_profiles: []
}
