src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__worker_status__tests__transition_3_verifying.snap
---
source: src/commands/task/orchestrate/worker_status.rs
expression: format_worker_status(&status)
---
WorkerStatus {
│ state: Verifying
│ task_id: Some("30.3")
│ component: Some("db")
│ phase: Some(Verify)
│ model: Some("claude-haiku-4-5-20251001")
│ cost_usd: $0.0200
│ input_tokens: 1000
│ output_tokens: 800
│ verify_profiles: [("unit-tests", Some(true)), ("integration-tests", Some(true))]
}
